Fix: Larger logo, improved layouts, delete from list, aligned buttons

--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -26,7 +26,7 @@
 }
 
 .logoImage {
-    height: 32px;
+    height: 40px;
     width: auto;
 }
 
